[tool.poetry]
name = "beancount-stubs"
version = "0.1.3"
description = "Stub files for the beancount package"
authors = ["Joshua Gilman <joshuagilman@gmail.com>"]
license = "MIT"
packages = [{ include = "beancount-stubs" }]

[tool.poetry.dependencies]
python = "^3.8.18"
beancount = "^2.3.6"

[tool.poetry.dev-dependencies]
mypy = "^1.11"
black = "^24.4.2"
flake8 = "^7.1.0"
twine = "^5.1.1"
docutils = "!=0.21.post1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
